--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Assets/css/style.css"/>
+    <link rel="stylesheet" href="Assets/css/style.css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Loki</title>
 </head>
+
 <body>
-    
+    <header>
+        <h2>ESTÁ DISPONÍVEL AGORA!</h2>
+        <h1>LOKI</h1>
+    </header>
+    <div class="content-desc">
+        <div class="logo-capa">
+            <img src="Assets/images/capa-loki.png" />
+        </div>
+        <div class="content-text">
+            <p>Em “Loki” da Marvel Studios, o vilão mercurial Loki (Tom Hiddleston) retoma
+                seu papel como o Deus do Mal em uma nova série que ocorre após os eventos de
+                “Vingadores: Endgame”.
+            </p>
+            <div class="desc-movie">
+                <i class='bx bx-time-five icon icon-time'></i>
+                <div class="time-min">51min</div>
+                <i class='bx bxs-star icon'></i>
+                <i class='bx bxs-star icon'></i>
+                <i class='bx bxs-star icon'></i>
+                <i class='bx bxs-star icon'></i>
+                <i class='bx bxs-star icon icon-empty'></i>
+                <div class=" time-min data">2021</div>
+            </div>
+            <div class="content-button">
+                <div class="button assistir">ASSISTIR AGORA</div>
+                <div class="button trailer">TRAILER</div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
