Alteração em toda estrutura do html e css (web concluído

--- a/index.html
+++ b/index.html
@@ -11,32 +11,40 @@
 </head>
 
 <body>
-    <header>
+    <div class="content-header">
         <h2>ESTÁ DISPONÍVEL AGORA!</h2>
         <h1>LOKI</h1>
-    </header>
-    <div class="content-desc">
-        <div class="logo-capa">
+    </div>
+    <div class="container">
+        <div class="content-image">
             <img src="Assets/images/capa-loki.png" />
         </div>
         <div class="content-text">
-            <p>Em “Loki” da Marvel Studios, o vilão mercurial Loki (Tom Hiddleston) retoma
-                seu papel como o Deus do Mal em uma nova série que ocorre após os eventos de
-                “Vingadores: Endgame”.
-            </p>
-            <div class="desc-movie">
-                <i class='bx bx-time-five icon icon-time'></i>
-                <div class="time-min">51min</div>
-                <i class='bx bxs-star icon'></i>
-                <i class='bx bxs-star icon'></i>
-                <i class='bx bxs-star icon'></i>
-                <i class='bx bxs-star icon'></i>
-                <i class='bx bxs-star icon icon-empty'></i>
-                <div class=" time-min data">2021</div>
+            <div class="inform-movie">
+                <P>Em “Loki” da Marvel Studios, o vilão mercurial Loki (Tom Hiddleston) retoma
+                    seu papel como o Deus do Mal em uma nova série que ocorre após os eventos de
+                    “Vingadores: Endgame”.
+                </P>
             </div>
-            <div class="content-button">
-                <div class="button assistir">ASSISTIR AGORA</div>
-                <div class="button trailer">TRAILER</div>
+            <div class="avaliation-movie">
+                <div class="time">
+                    <i class='bx bx-time-five'></i> 51 min
+                </div>
+                <div class="star-movie">
+                    <i class='bx bxs-star star-gold '></i>
+                    <i class='bx bxs-star star-gold'></i>
+                    <i class='bx bxs-star star-gold'></i>
+                    <i class='bx bxs-star star-gold'></i>
+                    <i class='bx bxs-star star-gold star-empty'></i>
+                </div>
+                <div class="date">2021</div>  
+            </div>
+            <div class="button-options">
+                <div class="style-button button-watch">ASSISTIR AGORA</div>
+                <div class="style-button button-trailer">TRAILER</div>
+            </div>
+            <div class="options">
+
             </div>
         </div>
     </div>
