--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="content-image">
             <img src="Assets/images/capa-loki.png" />
         </div>
-        <div class="content-text">
-            <div class="inform-movie">
+        <div class="content-movie">
+            <div class="desc">
                 <P>Em “Loki” da Marvel Studios, o vilão mercurial Loki (Tom Hiddleston) retoma
                     seu papel como o Deus do Mal em uma nova série que ocorre após os eventos de
                     “Vingadores: Endgame”.
@@ -37,14 +37,11 @@
                     <i class='bx bxs-star star-gold'></i>
                     <i class='bx bxs-star star-gold star-empty'></i>
                 </div>
-                <div class="date">2021</div>  
+                <div class="date">2021</div>
             </div>
             <div class="button-options">
-                <div class="style-button button-watch">ASSISTIR AGORA</div>
-                <div class="style-button button-trailer">TRAILER</div>
-            </div>
-            <div class="options">
-
+                <button class="style-button button-watch">ASSISTIR AGORA</button>
+                <button class="style-button button-trailer">TRAILER</button>
             </div>
         </div>
     </div>
